--- a/lesson2/.babelrc
+++ b/lesson2/.babelrc
@@ -1,7 +1,10 @@
 {
-    "plugins": [
-        "@babel/plugin-transform-arrow-functions",
-        "@babel/plugin-proposal-object-rest-spread",
-        "@babel/plugin-transform-template-literals"
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "browserslistEnv": "last 2 version, > 1%"
+            }
+        ]
     ]
 }
