--- a/lesson2/package.json
+++ b/lesson2/package.json
@@ -13,8 +13,6 @@
   "devDependencies": {
     "@babel/cli": "^7.13.0",
     "@babel/core": "^7.13.8",
-    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/plugin-transform-arrow-functions": "^7.13.0",
-    "@babel/plugin-transform-template-literals": "^7.13.0"
+    "@babel/preset-env": "^7.13.9"
   }
 }
