--- a/lesson2/.babelrc
+++ b/lesson2/.babelrc
@@ -3,7 +3,7 @@
         [
             "@babel/preset-env",
             {
-                "browserslistEnv": "last 2 version, > 1%"
+                "targets": "last 2 versions, > 1%"
             }
         ]
     ]
