--- a/lesson7/package.json
+++ b/lesson7/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "css-loader": "^5.1.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.3.9",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
